refactor: clean up code

--- a/movie-search/package.json
+++ b/movie-search/package.json
@@ -5,7 +5,7 @@
   "main": "script.js",
   "scripts": {
     "style": "sass --watch src/sass/style.scss src/sass/style.css",
-    "fix": "eslint src/script.js --fix",
+    "fix": "eslint src/js/MainPage.js --fix",
     "build": "webpack --mode production",
     "start": "webpack-dev-server --mode development --open --hot"
   },
@@ -29,6 +29,7 @@
     "css-loader": "^3.5.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.20.2",
     "favicons-webpack-plugin": "^3.0.1",
     "file-loader": "^6.0.0",
