--- a/movie-search/package.json
+++ b/movie-search/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "style": "sass --watch src/sass/style.scss src/sass/style.css",
     "fix": "eslint src/js/MainPage.js --fix",
+    "test": "jest",
     "build": "webpack --mode production",
     "start": "webpack-dev-server --mode development --open --hot"
   },
@@ -35,6 +36,7 @@
     "file-loader": "^6.0.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.2.0",
+    "jest": "^26.0.1",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
     "resolve-url-loader": "^3.1.1",
