fix: some fixes

--- a/movie-search/package.json
+++ b/movie-search/package.json
@@ -38,16 +38,17 @@
     "html-webpack-plugin": "^4.2.0",
     "jest": "^26.0.1",
     "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "resolve-url-loader": "^3.1.1",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.4",
     "url-loader": "^4.1.0",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "normalize.css": "^8.0.1",
     "swiper": "^5.3.8"
   }
