--- a/movie-search/package.json
+++ b/movie-search/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
+    "babel-jest": "^26.0.1",
     "babel-loader": "^8.1.0",
     "bootstrap": "^4.4.1",
     "clean-webpack-plugin": "^3.0.0",
